--- a/Elasticsearch/task1/mapping.json
+++ b/Elasticsearch/task1/mapping.json
@@ -25,7 +25,7 @@
                     },
                     "personal_information": {
                         "type": "text",
-                        "index": "false"
+                        "enabled": false
                     }
                 }
             },
