--- a/python/polish_api/docker-compose.yml
+++ b/python/polish_api/docker-compose.yml
@@ -2,6 +2,22 @@ version: "3"
 
 services:
 
+  elasticsearch:
+    image: elasticsearch:7.16.2
+    container_name: elasticsearch
+    environment:
+      ES_JAVA_OPTS: "-Xmx256m -Xms256m"
+      discovery.type: single-node
+      http.port: 9200
+    ports:
+    - 9200:9200
+    - 9300:9300
+    healthcheck:
+      test: curl -u elastic:elastic -s -f elasticsearch:9200/_cat/health >/dev/null || exit 1
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
   postgres:
     image: postgres
     container_name: postgres
@@ -30,4 +46,6 @@ services:
       - 5000:5000
     depends_on:
       postgres:
+        condition: service_healthy
+      elasticsearch:
         condition: service_healthy
