--- a/Poland/polish_scraper/Dockerfile
+++ b/Poland/polish_scraper/Dockerfile
@@ -1,4 +1,9 @@
-FROM python:3.10
+# FROM python:3.10 AS py3
+FROM openjdk:8-slim-buster
+
+# COPY --from=python:3.10 / /
+
+RUN apt-get update && apt-get install -y python3 python3-pip libpq-dev
 
 WORKDIR /app
 
@@ -6,7 +11,7 @@ COPY . /app
 
 RUN ./create_env.sh
 
-EXPOSE 8000
+EXPOSE 5000
 
-ENTRYPOINT [ "python" ]
+ENTRYPOINT [ "python3" ]
 CMD [ "run.py"]
